# sample-cpp

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md
scripts/: test.sh
src/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  TestFiles.cmake
